# red

interview/alphabet_position/: meson.build  solution.c
interview/archivator/: meson.build  solution.c
interview/bit_counting/: meson.build  solution.c
interview/libs/criterion-v2.3.3/lib/: libcriterion.so.3
interview/lost_number/: meson.build  solution.c
interview/vowel_count/: meson.build  solution.c
